Fixed double border, aligning sections

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,6 @@
 }
 body, html {
     width: 80%;
-    padding: 0;
     margin-left: 10%;
     margin-right: 10%;
     background-color: black;
@@ -14,25 +13,19 @@ body, html {
 }
 nav {
     background-color: black;
-    width: 100%;
     text-align: center;
+    width: 100%;
     height: 60px;
-    margin: 5px;
 }
 nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
     display: flex;
     justify-content: right;
     margin-top: 20px;
-    border-radius: 60px;
     border-style: solid;
     border-bottom: 1px solid white;
 }
 nav ul li {
     display: inline;
-    margin-top: 20 px;
     margin-bottom: 20px;
 }
 nav ul li a {
@@ -65,30 +58,34 @@ nav ul a:hover:after {
 
 h1 {
     color: white;
-    font-size: 50px;
-    float: left;
+    font-size: 60px;
+    text-align: left;
     margin-top: 30px;
-    margin-bottom: 5px;
-    padding: 5px;
+    margin-bottom: 10px;
+    width: 100%;
 }
 h2 {
     color: rosybrown;
     font-size: 20px;
-    float: left;
+    text-align: left;
     margin-top: 5px;
     margin-bottom: 40px;
-    padding: 5px;
+    width: 100%;
 }
 
-.projects {
-    padding: 5px;
-    margin-top: 10px;
+#projects h1 {
+    font-size: 30px;
 }
-.projects h1 {
-    margin-top: 5px;
-    color: rosybrown;
+#about h1 {
+    font-size: 30px;
 }
 
-.projects ul {
+#projects ul {
+    border: none;
+}
+
+#projects ul li {
     color: white;
+    letter-spacing: 0.5px;
 }
+
